Added basic UI with js.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="RPSlogic.js"></script>
+    <script src="RPSlogic.js" defer></script>
     <title>RPS Game</title>
 </head>
 <body>
     <h1>Rock Paper Scissors game in console!</h1>
+    <button id="btn" class="rock">Rock</button>
+    <button id="btn" class="scissors">Scissors</button>
+    <button id="btn" class="paper">Paper</button>
+    <p class="result">Human: 0 - Computer: 0</p>
 </body>
 </html>
